[tool.poetry]
name = "Quantitative calculations"
version = "1.0.0"
description = "Quantitative calculations - Part A) Beta"
authors = ["Matthew Wright, CPA, PSM, ACA"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
numpy = ">=1.18,<1.24"
scipy = "^1.10.1"
numba = "^0.56.4"
pytest = "^7.2.1"
yfinance = "^0.2.12"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
